feat: overhaul StudioAI UI with minimal-luxury design system

--- a/index.html
+++ b/index.html
@@ -1,49 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RealEstateAI Studio | Professional Interior Design</title>
+    <title>StudioAI | Real Estate Design Studio</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-      :root {
-        --brand-indigo: #4f46e5;
-        --ui-surface: #ffffff;
-        --ui-bg: #f8fafc;
-      }
-      body {
-        font-family: 'Inter', sans-serif;
-        background-color: var(--ui-bg);
-      }
-      h1, h2, h3, h4, h5, .font-display {
-        font-family: 'Plus Jakarta Sans', sans-serif;
-      }
-      .scrollbar-hide::-webkit-scrollbar {
-          display: none;
-      }
-      .scrollbar-hide {
-          -ms-overflow-style: none;
-          scrollbar-width: none;
-      }
-      .glass-card {
-        background: rgba(255, 255, 255, 0.8);
-        backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
-        border: 1px solid rgba(255, 255, 255, 0.3);
-      }
-      .editor-canvas-bg {
-        background-image: radial-gradient(#e2e8f0 1px, transparent 1px);
-        background-size: 20px 20px;
-      }
-      @media (max-width: 1024px) {
-        .mobile-panel-shadow {
-          box-shadow: 0 -4px 20px -5px rgba(0, 0, 0, 0.1);
-        }
-      }
-    </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.1",
@@ -55,9 +17,9 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
-</head>
-  <body class="bg-slate-50 text-slate-900">
+    <link rel="stylesheet" href="/index.css" />
+  </head>
+  <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
